[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "ItchClaim"
version = "1.0.0"
authors = [
  { name="Smart123s" },
]
dynamic = ["dependencies"]
description = "Automatically claim free games from itch.io"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Intended Audience :: End Users/Desktop',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3 :: Only',
        'Topic :: Internet',
]

[project.urls]
"Homepage" = "https://github.com/Smart123s/ItchClaim"
"Bug Tracker" = "https://github.com/Smart123s/ItchClaim/issues"

[project.scripts]
itchclaim = "ItchClaim.__main__:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
